--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,11 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  # - title: "Talks"
+  #   url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Courses"
+    url: /courses/    
     
   # - title: "Portfolio"
   #   url: /portfolio/
