--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Yuhao Liu"
   avatar           : "profile.png"
   bio              : "University of Electronic Science and Technology of China"
-  location         : "Location"
+  location         : "Chengdu, China"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
