--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yuhao Liu"
-  avatar           : "photo.png"
+  avatar           : "photo.jpg"
   bio              : "University of Electronic Science and Technology of China"
   location         : "Chengdu, China"
   employer         :
